<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings used in app ui-->
    <string name="app_name">TapzTwitter</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Bonjour, " " </string>
    <string name="login_instructions">Login to Twitter</string>
    <string name="btn_Hashtags">Tweets by Hashtags</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_Time">Tweets by TimeStamp</string>
    <string name="btn_web">Open WebView</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">TapzTwitter</string>
    <string name="twitter_consumer_key">vM5RNi5CCodJnL7e5BOA</string>
    <string name="twitter_consumer_secret">FQNS0eBbM8J5DDjDglLCwOvAUUesYhN5uFxdxjKLgk</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>

    <!-- End Configurations -->

</resources>